package com.etayoga.server.users.dto;

/**
 * Role enumeration
 */
public enum Role {
    ADMIN,
    FARMER,
    BOT
}
